<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4FFFFFF"
    android:backgroundTint="#2088E3"
    tools:context=".CurrentAccountActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="75dp"
        android:layout_height="74dp"
        android:clickable="true"
        android:contentDescription="@string/logo_desc"
        android:focusable="true"
        android:onClick="HomeButtonOnClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kuva1" />

    <Button
        android:id="@+id/payNavButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:backgroundTint="#1847BC"
        android:onClick="payNavButtonOnClick"
        android:text="@string/payNavButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/transferNavButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:backgroundTint="#1847BC"
        android:onClick="MoneyTransferButtonOnClick"
        android:text="@string/transferNavButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cardsNavButton"
        app:layout_constraintStart_toEndOf="@+id/payNavButton"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cardsNavButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:backgroundTint="#1847BC"
        android:onClick="CardsButtonOnClick"
        android:text="@string/cardsNavButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/SignOut_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="138dp"
        android:layout_height="45dp"
        android:backgroundTint="#1847BC"
        android:onClick="logOutButtonOnClick"
        android:text="Kirjaudu ulos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/view"
        android:layout_width="354dp"
        android:layout_height="344dp"
        android:background="#1847BC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transferNavButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/curAccTextview"
        android:layout_width="170dp"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/currentAccount"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/balanceTextview"
        android:layout_width="58dp"
        android:layout_height="22dp"
        android:text="@string/balance_textview"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/curAccTextview"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/curAccBalanceTextview"
        android:layout_width="97dp"
        android:layout_height="24dp"
        android:gravity="end|center_vertical"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/curAccTextview"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tapahtumat"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/balanceTextview" />

    <LinearLayout
        android:layout_width="305dp"
        android:layout_height="259dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">

        <ScrollView
            android:id="@+id/cardsScrollView"
            android:layout_width="match_parent"
            android:layout_height="249dp"
            android:layout_marginTop="8dp">


            <TextView
                android:id="@+id/cardsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="TextView"
                android:textColor="#FFFFFF" />
        </ScrollView>
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="91dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:background="#F4F2F2"
        android:gravity="start|left"
        app:layout_constraintBottom_toBottomOf="@+id/SignOut_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/SignOut_button"
        app:layout_constraintTop_toTopOf="@+id/SignOut_button" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="43dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:gravity="right|center_vertical"
        android:text="Tili:"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="@+id/spinner" />


    <![CDATA[








    />






]]>
</androidx.constraintlayout.widget.ConstraintLayout>